--- a/MyGame/MyGame/MyGame.csproj
+++ b/MyGame/MyGame/MyGame.csproj
@@ -46,6 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseObject.cs" />
+    <Compile Include="FormSS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSS.Designer.cs">
+      <DependentUpon>FormSS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SplashScreen.cs" />
     <Compile Include="Galaxy.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
@@ -54,6 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FormSS.resx">
+      <DependentUpon>FormSS.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
