--- a/MyGame/MyGame/MyGame.csproj
+++ b/MyGame/MyGame/MyGame.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="GameException.cs" />
     <Compile Include="ICollision.cs" />
+    <Compile Include="Ship.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Galaxy.cs" />
     <Compile Include="Game.cs" />
@@ -73,9 +74,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="aster1.PNG" />
-    <Content Include="aster2.PNG" />
-    <Content Include="aster3.PNG" />
-    <Content Include="aster4.PNG" />
     <Content Include="galaxy.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
