--- a/MyGame/MyGame/MyGame.csproj
+++ b/MyGame/MyGame/MyGame.csproj
@@ -56,6 +56,8 @@
     </Compile>
     <Compile Include="GameException.cs" />
     <Compile Include="ICollision.cs" />
+    <Compile Include="LogBook.cs" />
+    <Compile Include="RepairKit.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Galaxy.cs" />
@@ -73,8 +75,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="aster1.PNG" />
-    <Content Include="galaxy.jpg" />
+    <Content Include="aster.PNG" />
+    <Content Include="RepairKit.jpg" />
+    <Content Include="Ship.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
